# algorithms

./: CMakeLists.txt  README.md  TODO.txt
applications/: palindrome.c
data-structures/: Makefile  binary-search-tree.h  data-structures.c  heap.c  linked-list.c  linked-list.h  queue.c  queue.h  stack.h
data-structures/include/: binary-tree.h  graph-node.h  heap.h  linked-list.h
data-structures/src/: linked-list.c  stack.c
dynamic-programming/: fibonacci.c
graph-algorithms/: graphs.c
sorting/: a.out  advancedSorts.c  basicSorts.c  basicSorts.h  main.c  quicksort.h
sorting/include/: advancedSorts.h  basicSorts.h
sorting/src/: advancedSorts.c  basicSorts.c
src/: anagram.c  data-structures-main.c  makeChange.c  sorting-main.c
